# clinic-secretary

./: .gitignore  DEBUGGING.md  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.md  test_agent.py  test_clinic_info.py  test_database.py  test_google_calendar.py  test_improved_agent.py  test_meta_api_direct.py  test_whatsapp_auth.py
.cursor/rules/: dependencies-management-rules.mdc  project-technology-stack-context.mdc
src/: database.py  graph.py  main.py
src/agents/: calendar_agent.py  clinic_info_agent.py  notification_agent.py  orchestrator_agent.py
src/config/: clinic_info.json
src/models/: __init__.py  appointment.py  base.py  doctor.py  patient.py
src/static/: index.html  script.js  style.css
src/tools/: clinic_info_tools.py  conversation_state_manager.py  database_tools.py  google_calendar_tools.py  whatsapp_tools.py
